# rust_graph

./: .gitignore  .rust-toolchain.toml  Cargo.toml  Makefile  README.md  build.rs  dist-workspace.toml  index.html  netlify.toml  rust-toolchain.toml  rustfmt.toml  sw.js
.cargo/: config.toml
.github/workflows/: main.yml  run_tests.yml
assets/: index.html
evalexpr/: Cargo.toml
evalexpr/benches/: benchs.rs
evalexpr/src/: lib.rs
evalexpr/src/context/: mod.rs
evalexpr/src/context/predefined/: mod.rs
evalexpr/src/error/: display.rs  mod.rs
evalexpr/src/feature_serde/: mod.rs
evalexpr/src/flat_node/: compile.rs  eval.rs  function_inlining.rs  inlining.rs  mod.rs  optimization.rs  subexpression_elemination.rs  variable_inlining.rs
evalexpr/src/function/: builtin.rs  expression_function.rs  mod.rs  rust_function.rs
evalexpr/src/interface/: mod.rs
evalexpr/src/math/: float_to_rational.rs  gcd.rs  integrate.rs  mod.rs
evalexpr/src/operator/: display.rs  mod.rs
evalexpr/src/token/: display.rs  mod.rs
evalexpr/src/tree/: display.rs  iter.rs  mod.rs
evalexpr/src/value/: display.rs  mod.rs  numeric_types.rs  value_type.rs
evalexpr/src/value/numeric_types/: default_numeric_types.rs  f32_numeric_types.rs
evalexpr/tests/: integration.rs  rand.rs  regex.rs  serde.rs
examples/: Calculus - Taylor Sin.json  Circle to Hyperbola.json  Color picker.json  Conic - Ellipse and Hyperbola.json  Conic - Parabola and Focus.json  Curves - Quadric and Cubic.json  Distance - Circle to Circle.json  Distance - Segment to Point.json  Epicycles.json  Fourier Sawtooth .json  Fourier Square.json  Integral area.json  Interesting Functions.json  Lagrange points .json  Parabola - Standard Form.json  Parabola - Vertex Form.json  Polar donut.json  Riemann zeta function.json  Sin on Sin on Sin.json  Trig - Sinusoid with amplitude and period.json  Trig - Unit Circle Ex.json  Trig - Unit Circle.json  Trig - Wave Interference.json  Vectors - Difference.json  Vectors - Sum.json  Wierd.json
src/: app_ui.rs  builtins.rs  color.rs  custom_rendering.rs  draw_buffer.rs  entry.rs  f32_numeric_type.rs  fan_shader.wgsl  graph.rs  graph_ui.rs  lib.rs  main.rs  marching_squares.rs  math.rs  math_utils.rs  persistence.rs  side_panel.rs  side_panel_ui.rs  utils.rs  widgets.rs
src/custom_rendering/: fan_fill_renderer.rs  mesh_renderer.rs  mesh_shader.wgsl  mod.rs
src/drawing/: line.rs
src/entry/: drag_point.rs  entry_plot_elements.rs  entry_processing.rs  entry_ui.rs
src/graph/: create_plot_elements.rs  plot_elements.rs  plot_elements_scheduler.rs  point_dragging.rs
src/graph_ui/: create_plot_elements.rs  graph_config.rs  plot_elements.rs  plot_elements_scheduler.rs  point_dragging.rs
src/plot_extensions/: line.rs  mod.rs  text.rs
src/widgets/: line.rs
wasm/: README.md  package.json  rust_graph.d.ts  rust_graph.js  rust_graph_bg.wasm.d.ts
wix/: main.wxs
