# cargo-features = ["profile-rustflags"]
[package]
name = "rust_graph"
version = "0.1.0"
edition = "2021"
authors = ["Vedran Maric <valinion@gmail.com>"]
description = "Graphing calculator with f32 support."
license = "MIT"
readme = "README.md"
repository = "https://github.com/vdrn/rust_graph"
build = "build.rs"


[lib]
crate-type = ["cdylib", "rlib"]

[profile.profiling]
inherits = "release"
debug = "line-tables-only"
split-debuginfo="unpacked"
# rustflags=[ "-C", "force-frame-pointers=yes" ]

[dependencies]
eframe = {version="0.33", features=["persistence"]}
cfg-if = "1"
egui_plot="*"
wasm-bindgen-futures = "0.4"
# evalexpr={version="13", fetures=["serde"]}
# evalexpr={path ="../../contrib/evalexpr", features=["serde"]}
evalexpr={git="https://github.com/vdrn/evalexpr"}

smallvec="*"
ahash={version="*",default-features=false, features=["std"]}
parking_lot = "0.12"
serde={version="1", features=["derive"]}
serde_json="1"
urlencoding="2"
puffin = {version="*"}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# puffin = {path="../../contrib/puffin/puffin", features=["quanta"]  }
# puffin_http = {path="../../contrib/puffin/puffin_http" }
puffin_http = {version="*"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Location", "History"] }
console_error_panic_hook = "0.1"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "rust_graph.exe"
