[package]
name = "rust_graph"
version = "0.5.5"
edition = "2024"
authors = ["Vedran Maric <valinion@gmail.com>"]
description = "Graphing calculator with f32 support."
license = "MIT"
readme = "README.md"
repository = "https://github.com/vdrn/rust_graph"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
puffin = ["dep:puffin_http", "dep:puffin"]
default = []

[profile.dev]
opt-level = 1
[profile.release]
# debug-assertions = true
# debug="line-tables-only"

[profile.profiling]
inherits = "release"
debug = "line-tables-only"
split-debuginfo="unpacked"


# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
eframe = { version = "0.33",features=["persistence"] }
cfg-if = "1"
egui_plot="0.34"
# enum-map="2.7"

# egui_extras={version = "0.33", features=["syntect"]}
# syntect = { version = "5.3", default-features = false, features = ["default-fancy"]}
evalexpr = { path = "evalexpr" }

rustc-hash = "2"
serde = { version = "1" }
serde_json = "1"
egui_dnd="0.14"
bincode={version="2", features=["serde"]}
base64="0.22"
arrayvec = "0.7"
smallvec = {version = "1", features = ["union"]}
rayon={version="1", features=["web_spin_lock"]}
thread_local="1"
regex = "1"
# needed so dependencies downstream can compile to wasm
getrandom = { version = "0.3", features = ["wasm_js"] }
# debug-cell="*"
[patch.crates-io]
# egui_plot = { path = "../../contrib/egui_plot/egui_plot" }
# puffin = { path = "../../contrib/puffin/puffin" }
# puffin_http = { path = "../../contrib/puffin/puffin_http" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
puffin = { version = "0.19", optional = true }
puffin_http = { version = "0.16", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Location", "History"] }
console_error_panic_hook = "0.1"
wasm-bindgen-rayon = {version = "1.3", features=["no-bundler"]}

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "rust_graph.exe"

[package.metadata.wix]
upgrade-guid = "F5A5E32F-2040-48A4-8A21-5F9C03F92F9E"
path-guid = "01BA2970-B62C-42B7-B886-739A22943DF0"
license = false
eula = false



[lints.rust]
# unused_crate_dependencies="warn"
ambiguous-negative-literals="warn"
deref_into_dyn_supertrait="warn"
explicit_outlives_requirements="warn"
let_underscore_drop="warn"
redundant_lifetimes="warn"
unit_bindings="warn"
unused_must_use = "warn"

[lints.clippy]

todo ="warn"
unimplemented ="warn"
undocumented_unsafe_blocks = "warn"
# print_stderr ="warn"
# print_stdout ="warn"

# debug_assert_with_mut_call ="warn"
# needless_pass_by_value ="warn"
# redundant_closure_for_method_calls="warn"
# unreadable_literal ="warn" 
# manual_assert ="warn"
integer_division = "warn" # Problem with this is that we would want to allow division with constants

# ### Warnings/Denys
large_stack_frames = "warn"
exit ="warn"
panic_in_result_fn ="warn"
unused_peekable = "warn" 
unnecessary_join = "warn"
single_match_else = "warn"
single_option_map = "warn"
return_self_not_must_use = "warn"
cast_ptr_alignment = "warn"
enum_glob_use = "warn"
fallible_impl_from = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
alloc_instead_of_core = "warn"
expl_impl_clone_on_copy = "warn"
borrow_as_ptr = "warn"
explicit_into_iter_loop = "warn"
filter_map_next ="warn"
format_collect ="warn"
format_push_string ="warn"
implicit_clone="warn"
inefficient_to_string="warn"
iter_filter_is_some ="warn"
iter_filter_is_ok="warn"
iter_on_empty_collections="warn"
manual_is_power_of_two="warn"
match_bool="warn"
unused_self ="warn"
cloned_instead_of_copied  = "warn"
trivially_copy_pass_by_ref = "warn"
manual_instant_elapsed ="warn"
manual_let_else ="warn"
manual_string_new ="warn"
map_with_unused_argument_over_ranges="warn"
mem_forget ="warn"
mismatching_type_param_order ="warn"
modulo_arithmetic ="warn"
needless_collect ="warn"
needless_continue ="warn"
needless_for_each ="warn"
needless_pass_by_ref_mut ="warn"
# or_fun_call ="warn"
no_effect_underscore_binding ="warn"
non_send_fields_in_send_ty ="warn"
non_zero_suggestions ="warn"
precedence_bits ="warn"
option_as_ref_cloned ="warn"
rc_buffer ="warn"
redundant_else ="warn"
redundant_clone ="warn"
redundant_pub_crate ="warn"
ref_option ="warn"
ref_option_ref ="warn"
renamed_function_params ="warn"
same_name_method ="warn"
set_contains_or_insert ="warn"
significant_drop_in_scrutinee = "warn"
stable_sort_primitive ="warn"
string_lit_chars_any ="warn"
trait_duplication_in_bounds ="warn"
transmute_undefined_repr ="warn"
type_repetition_in_bounds ="warn"
unchecked_duration_subtraction ="warn"
unnecessary_wraps ="warn"
unused_async ="warn"
unused_result_ok ="warn"

### Allows
single_match = "allow"
let_and_return = "allow" # this is just a bad lint
new_without_default = "allow" # no thanks
collapsible_if = "allow" # too strict. too much trouble `allow`ing it.
collapsible_else_if = "allow" # same as `collapsible_if`
tabs_in_doc_comments = "allow" # `rustfmt` automatically uses tabs for doc comments when `hard_tabs = true`
needless_range_loop="allow" # useful but not always
